# aoc-2025

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/day-1/: README.md  secret-entrance.rs
src/day-10/: README.md  factory.rs
src/day-11/: README.md  reactor.rs
src/day-2/: README.md  gift-shop.rs
src/day-3/: README.md  lobby.rs
src/day-4/: README.md  printing-department.rs
src/day-5/: README.md  cafeteria.rs
src/day-6/: README.md  trash-compactor.rs
src/day-7/: README.md  laboratories.rs
src/day-8/: README.md  playground.rs
src/day-9/: README.md  movie-theater.rs
