[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "secret-entrance"
path = "src/day-1/secret-entrance.rs"

[[bin]]
name = "gift-shop"
path = "src/day-2/gift-shop.rs"

[[bin]]
name = "lobby"
path = "src/day-3/lobby.rs"

[[bin]]
name = "printing-department"
path = "src/day-4/printing-department.rs"

[[bin]]
name = "cafeteria"
path = "src/day-5/cafeteria.rs"
