[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "secret-entrance"
path = "src/day-1/secret-entrance.rs"

[[bin]]
name = "gift-shop"
path = "src/day-2/gift-shop.rs"

[[bin]]
name = "lobby"
path = "src/day-3/lobby.rs"

[[bin]]
name = "printing-department"
path = "src/day-4/printing-department.rs"

[[bin]]
name = "cafeteria"
path = "src/day-5/cafeteria.rs"

[[bin]]
name = "trash-compactor"
path = "src/day-6/trash-compactor.rs"

[[bin]]
name = "laboratories"
path = "src/day-7/laboratories.rs"

[[bin]]
name = "playground"
path = "src/day-8/playground.rs"

[[bin]]
name = "movie-theater"
path = "src/day-9/movie-theater.rs"

[[bin]]
name = "factory"
path = "src/day-10/factory.rs"

[[bin]]
name = "reactor"
path = "src/day-11/reactor.rs"
